TLH-11447 added assignment correction
